--- a/frontend/download.html
+++ b/frontend/download.html
@@ -19,7 +19,7 @@
             type="application/javascript"
             src="https://unpkg.com/babel-standalone@6.26.0/babel.js"
         ></script>
-        <script type="text/babel" src="js/app.jsx"></script>
+        <script type="text/babel" src="js/download.jsx"></script>
         <link
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
             rel="stylesheet"
@@ -27,6 +27,6 @@
     </head>
 
     <body>
-        <div id="app"></div>
+        <div id="download"></div>
     </body>
 </html>
