--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
-        <title>go-gin-react-helloworld</title>
-        <script
-            type="application/javascript"
-            src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"
-        ></script>
-        <script
-            type="application/javascript"
-            src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"
-        ></script>
-        <script
-            type="application/javascript"
-            src="https://unpkg.com/babel-standalone@6.26.0/babel.js"
-        ></script>
-        <script type="text/babel" src="js/app.jsx"></script>
-        <link
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-            rel="stylesheet"
-        />
+        <link rel="stylesheet" href="style.css" />
     </head>
-
     <body>
-        <div id="app"></div>
+        <div id="root">
+            <div class="header">
+                <video class="header" autoplay muted loop id="myVideo">
+                    <source src="video.mp4" type="video/mp4" />
+                    Your browser does not support HTML5 video.
+                </video>
+                <div class="title">
+                    PO-sqrt-team
+                    <br />
+                    модель CatBoost🐈 с нормализацией
+                </div>
+            </div>
+            <div class="content">
+                <div class="card">
+                    <p style="margin-top: 10px">Загрузить файл</p>
+                    <form
+                        action="/upload"
+                        method="post"
+                        enctype="multipart/form-data"
+                    >
+                        <input type="file" name="file" />
+                        <input type="submit" />
+                    </form>
+                </div>
+                <div class="card">
+                    <p style="margin-top: 10px">
+                        Ссылка на
+                        <a
+                            style="
+                                text-decoration: underline;
+                                margin-top: 10px;
+                                color: white;
+                            "
+                            href="http://github.com/korzck/trainhop"
+                            >github</a
+                        >
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
